Replace new Integer/Long with Integer/Long.valueOf